# maxima

./: .cvsignore  .gitignore  AUTHORS  COPYING  COPYING1  ChangeLog  ChangeLog-5.17  ChangeLog-5.19  ChangeLog-5.29  ChangeLog-5.31  ChangeLog-5.33  ChangeLog-5.34  ChangeLog-5.35  ChangeLog-5.36  ChangeLog-5.37.md  ChangeLog-5.38.md  ChangeLog-5.39.md  ChangeLog-5.40.md  ChangeLog-5.41.md  ChangeLog-5.42.md  ChangeLog-5.43.md  ChangeLog-5.44.md  ChangeLog-5.45.md  ChangeLog-Current.md  ChangeLog-current.md  INSTALL  INSTALL.cvs  INSTALL.git  INSTALL.lisp  INSTALL.win32  INSTALL.win32nogcl  Makefile.am  NEWS  README  README-lisps.md  README.developers-howto  README.external  README.i18n  README.lisps  README.rpms  (+18 more)
crosscompile-windows/: CMakeLists.txt  LICENSE_APPENDIX.txt  Makefile.am  NSIS.template.in  README.txt  TODO.txt  Toolchain-mingw32.cmake  licenses.html  lispselector.bat  lispselector.tcl  maxima-installerimage.xcf  maxima-vtk-patch  maxima.bat.in-patch  maxima_longnames.c  nightlybuild.sh  nightlytest.sh  sbcl.sh  sbcl.sh.tmpl  setup-imaxima-imath.el-patch.tmpl  vtk-6.3.patch  wine-ccl.sh.tmpl  wine-clisp.sh.tmpl  wine-ecl.sh.tmpl  wine-lisp.sh.tmpl  wine-sbcl.sh.tmpl  wxmaxima-15.08.0.patch  wxmaxima-16.04.1-patch  wxmaxima-16.04.2-patch  wxmaxima-assoc.bat  xmaxima.bat
crosscompile-windows/abcl/: CMakeLists.txt
crosscompile-windows/ccl/: CMakeLists.txt
crosscompile-windows/ecl/: CMakeLists.txt
crosscompile-windows/gnuplot/: CMakeLists.txt
crosscompile-windows/imagemagick/: CMakeLists.txt
crosscompile-windows/sbcl/: CMakeLists.txt
crosscompile-windows/tcltk/: CMakeLists.txt
crosscompile-windows/texinfo/: CMakeLists.txt
crosscompile-windows/vtk/: CMakeLists.txt
crosscompile-windows/w64devkit/: CMakeLists.txt
crosscompile-windows/wine/: CMakeLists.txt
crosscompile-windows/wxmaxima/: CMakeLists.txt  editor-textlength.patch  wxmathml.patch
crosscompile-windows/wxwidgets/: CMakeLists.txt  Makefile.am  debian-crosscompile-correction.sh  wxwidgets-install-translations-for-wxmaxima.sh.tmpl  wxwidgets-libname-correction.sh.tmpl
desktopintegration/: Makefile.am  Xmaxima.desktop  maxima  net.sourceforge.maxima.xmaxima.appdata.xml  net.sourceforge.maxima.xmaxima.desktop  rmaxima  x-mac.xml  x-maxima-out.xml  xmaxima  xmaxima.desktop
doc/: Makefile.am
doc/emaxima/: EMaximaIntro.ps  EMaximaIntro.tex
doc/implementation/: dir_vars.txt  external-interface.txt  maximatoplevelflow.dot  maximatoplevelflow.ps  sloop-loop-changes.txt
doc/info/: #include-maxima.texi#  .cvsignore  .gitattributes  .gitignore  Affine.texi  Arrays.texi  Atensor.texi  Bugs.texi  ChangeLog  Command.texi  Constants.texi  Constants.texi.m4  Contexts.texi  Ctensor.texi  DataTypes.texi  Database.texi  Debugging.texi  Deleted.texi  Differential.texi  Differentiation.texi  Elliptic.texi  Elliptic.texi.m4  Equations.texi  Evaluation.texi  Expressions.texi  Floating.texi  Function.texi  Groups.texi  Help.texi  Indices.texi  Input.texi  Integration.texi  Integration.texi.m4  Introduction.texi  Itensor.texi  Limits.texi  Lists.texi  Logarithms.texi  Makefile.am  MathFunctions.texi  (+142 more)
doc/intromax/: Makefile.am  intromax.html  intromax.ltx  intromax.tex
doc/man/: .cvsignore  Makefile.am  maxima.1  maxima.1.in
doc/maximabook/: .cvsignore  Makefile  README  TODO  maxima.bib  maxima.tex
doc/share/: Makefile.am  bessel.usg  brchre.txt  specfun.texi
interfaces/xmaxima/: .cvsignore  ChangeLog.txt  Makefile.am  Readme.txt  adams.tcl  autoconf-variables.tcl  autoconf-variables.tcl.in  base64.tcl  bitmaps.tcl  browser.tcl  demos.html  emaxima.tcl  eoctave.tcl  eopenplot.tcl  examples.html  getdata1.tcl  getopt.tcl  intro.html  myhtml.tcl  nconsole.tcl  nplot3d.tcl  omplotdata  parse.tcl  patchold.tcl  plot2d.tcl  plot3d.tcl  plotconf.tcl  plotdf.tcl  plotmaxima.html  printopts.tcl  proxy.tcl  rk.tcl  send-some.tcl  server.lisp  string.tcl  textinsert.tcl  tryembed.tcl  tryftp2.tcl  wmenu.tcl  xmaxima  (+3 more)
locale/: .gitignore  Makefile.am  README  es.po  maxima.pot  pt.po
plotting/: .gitignore  Makefile.am  footer.tcl  header.tcl.in  mgnuplot  mgnuplot.in  paths.tcl
plotting/msgs/: Makefile.am  ru.msg
share/: .gitattributes  .gitignore  MYTOPIC-index.lisp  MYTOPIC.info  Makefile.am  README  builtins-list.txt  maxima-init.lisp  share.usg  share_testsuite.lisp  share_testsuite.mac  template-standalone.texi  template.texi
share/affine/: affine.lisp  affine.system  amacros.lisp  aquotient.lisp  compat.lisp  dim-3.lisp  dim4-help.lisp  dummy-gc.lisp  macbasic.mac  make.lisp  makefile  modsimp.lisp  ndotsimp.lisp  new-rat.lisp  polya.lisp  polyb.lisp  polybas.lisp  polyc.lisp  polyd.lisp  polysmp.lisp  sheafa.lisp  sheafb.lisp  sheafc.lisp  sloop.lisp  sparsemat.lisp  sub-proj.lisp  sys-declaim.lisp  sys-proclaim.lisp  sysdef.lisp  todd-coxeter.lisp
share/algebra/: differ.dem  differ.mac  gcdex.mac  grob1.lisp  nusum.mac  nusum.usg  recur.dem  recur.mac  (+1 more)
src/: .cvsignore  .gitattributes  .gitignore  Makefile.am  Readme.md  SYS-DECLAIM.lisp  SYS-PROCLAIM.lisp  acall.lisp  acl-depends.mk  acl6-depends.mk  airy.lisp  algext.lisp  algfac.lisp  algsys.lisp  ar.lisp  askp.lisp  asum.lisp  autoconf-variables.lisp.in  autol.lisp  bessel.lisp  buildq.lisp  cl-info.lisp  clisp-depends.mk  clmacs.lisp  cmucl-depends.mk  combin.lisp  comm.lisp  comm2.lisp  commac.lisp  command-line.lisp  compar.lisp  compat.lisp  conjugate.lisp  cpoly.lisp  csimp.lisp  csimp2.lisp  db.lisp  defcal.lisp  defint.lisp  defmfun-check.lisp  (+198 more)
tests/: .gitignore  Makefile.am  README  README.how-to  command-line-options.el  displa-prepost-subsuper-scripts-input  docdraw.mac  draw.wxm  examples.mac  known-bugs  ltest2.lisp  ltests.lisp  quit.lisp  redirect_asksign.lisp  rexamples.mac  rtest1.mac  rtest10.mac  rtest11.mac  rtest12.mac  rtest13.mac  rtest13s.mac  rtest14.mac  rtest15.mac  rtest16.mac  rtest1a.mac  rtest2.mac  rtest3.mac  rtest4.mac  rtest5.mac  rtest6.mac  rtest6a.mac  rtest6b.mac  rtest7.mac  rtest8.mac  rtest9.mac  rtest9a.mac  rtest_abs.mac  rtest_algebraic.mac  rtest_algsys.mac  rtest_allnummod.mac  (+81 more)
(+4061 files in other folders)
